--- a/12_comment_semantic_analysis/comment_semantic_analysis.ipynb
+++ b/12_comment_semantic_analysis/comment_semantic_analysis.ipynb
@@ -34,15 +34,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -66,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/datasets/toxic_comments.csv')"
+    "df = pd.read_csv('/home/konstantin/datasets/toxic_comments.csv')"
    ]
   },
   {
@@ -81,8 +73,10 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 159571 entries, 0 to 159570\n",
       "Data columns (total 2 columns):\n",
-      "text     159571 non-null object\n",
-      "toxic    159571 non-null int64\n",
+      " #   Column  Non-Null Count   Dtype \n",
+      "---  ------  --------------   ----- \n",
+      " 0   text    159571 non-null  object\n",
+      " 1   toxic   159571 non-null  int64 \n",
       "dtypes: int64(1), object(1)\n",
       "memory usage: 2.4+ MB\n"
      ]
@@ -124,27 +118,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>D'aww! He matches this background colour I'm s...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -218,8 +212,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data] Downloading package punkt to /home/konstantin/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
     },
     {
@@ -308,7 +302,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/konstantin/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -358,16 +353,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/sklearn/model_selection/_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
-      "  warnings.warn(CV_WARNING, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = LogisticRegression(max_iter=300, solver='liblinear', class_weight='balanced')\n",
     "score1 = cross_val_score(model, tf_idf_train, train.toxic, scoring='f1')"
@@ -382,7 +368,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7472438636262243\n"
+      "0.750752910969583\n"
      ]
     }
    ],
@@ -398,11 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
-       "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
-       "                   max_iter=300, multi_class='warn', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
+       "LogisticRegression(class_weight='balanced', max_iter=300, solver='liblinear')"
       ]
      },
      "execution_count": 16,
@@ -486,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,18 +477,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7741\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.mean(score2).round(4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10167887648758234"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.toxic.mean()"
    ]
@@ -522,75 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Я очень хотел применить нейронки, в итоге не смог получить какой-то выдающийся результат, в лучшем случае F1=0.72. Была испробована модель bert_uncased и вторая, distilbert, используемая ниже. В документации сказано, она хорошо подходит для семантического анализа и более легковесна чем собсвенно BERT. Эмбединги генерировались около 3 часов, поэтому я сохранил результат в csv-файл и в представленной версии ноутбука признаки и ответы берутся оттуда. Сам процесс обучения оставляю в закомментированном виде."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tweets = train_tweets.sample(30000).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
-    "# pt_model = transformers.AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "# tokenizer = transformers.AutoTokenizer.from_pretrained(model_name, model_max_length=512, truncation=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tensors = tokenizer(df_tweets.lemm_text.to_list(), padding=True, truncation=True, max_length=512, return_tensors=\"pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# batch_size = 10\n",
-    "# embeddings = []\n",
-    "# for i in notebook.tqdm(range(df_tweets.shape[0] // batch_size)):\n",
-    "    \n",
-    "#         tmp_batch = tensors.data['input_ids'][batch_size*i:batch_size*(i+1)]\n",
-    "#         attention_mask_batch = tensors.data['attention_mask'][batch_size*i:batch_size*(i+1)]\n",
-    "        \n",
-    "#         with torch.no_grad():\n",
-    "#             batch_embeddings = pt_model(tmp_batch, output_hidden_states=True, output_attentions=True,\n",
-    "#                                        attention_mask=attention_mask_batch)\n",
-    "\n",
-    "#         embeddings.append(batch_embeddings[1][-1][:,0,:].numpy())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Важный дисклеймер\n",
-    "\n",
-    "Эмбединги сверху считаются на моем ПК около трех часов (с учетом того, что я не являюсь обладателем даже consumer-grade видеокарты Nvidia, не говоря уже о чем-то более серьезном). Выборка неполная (30000 строк), но качество вряд ли станет лучше на полной (и у меня столько оперативной памяти нет).\n",
-    "\n",
-    "Поэтому сгрузил готовые эмбеддинги в виде файлов csv. К сожалению, облака не предоставляют прямые ссылки на файлы, а гитхаб такие большие и вовсе принимать отказывается. Пришлось прибегнуть к помощи Google Colab, там готовая среда и точно все запустится.\n",
-    "\n",
-    "Правда, проблему с подгрузкой файла не и там не удалось как-то красиво решить.\n",
-    "\n",
-    "Поэтому, если есть возможность, посмотрите вторую часть по ссылке ниже. Для просмотра никаких доп. манипуляций не требуется, однако если вы сочтете возможным, там есть мини-инструкция по подгрузке файлов с эмбеддингами, после чего код можно выполнять.\n",
-    "\n",
-    "Очень много времени потратил на работу с этой моделью, не хотелось выбрасывать, даже несмотря на не самый лучший результат.\n",
-    "\n",
-    "Спасибо за понимание. Потом можно сразу пролистать к выводам."
+    "Поскольку обучение нейронок предпочтительно делать на GPU, раздел вынесен в отдельный блокнот (в соседнем файле), либо можно пройти по ссылке непосредственно в Google Colab"
    ]
   },
   {
@@ -598,211 +531,6 @@
    "metadata": {},
    "source": [
     "https://colab.research.google.com/drive/1XTw1X7BS-_p9h03uH0ffCf_9BTzr7ouS?usp=sharing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# features = np.concatenate(embeddings)\n",
-    "# target = df_tweets['toxic']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# features = np.loadtxt(r'D:\\features_new_new.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# target = pd.read_csv(r'D:\\target_new.csv').values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model2 = LogisticRegression(max_iter=500, random_state=12345, solver='liblinear', C=0.7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(cross_val_score(model2, features, target, scoring='f1').mean())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Сплит, чтобы посмотреть характер ошибок модели"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(features, target, stratify=target, test_size=0.1, random_state=12345)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"Ручной\" фит + предикт"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model2.fit(X_train, y_train)\n",
-    "# pred_nn = model2.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Результаты:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"F1:\", f1_score(y_test, pred_nn).round(4), '\\nPrecision:',\n",
-    "#       precision_score(y_test, pred_nn).round(4), '\\nRecall', recall_score(y_test, pred_nn).round(4))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Матрица ошибок:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(confusion_matrix(y_test, pred_nn))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Целевой класс в трети случаев не опознан - плохая модель, в прод я бы такое постыдился выпускать"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Получим вероятности"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# probas = model2.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Небольшой перебор порогов классификации"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in np.arange(0.2, 0.8, 0.1):\n",
-    "#     preds_by_hand = [0 if pred_pos < i else 1 for pred_neg, pred_pos in probas]\n",
-    "#     print(i, 'is', f1_score(y_test, preds_by_hand))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# features = pd.read_csv(r'D:\\features_new.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Таки дожали 0.75, но в целом провал"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test = pd.DataFrame(df_tweets['text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_train, test_test = train_test_split(test, test_size=0.1, random_state=12345)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_test['real'] = y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_test['pred'] = pred_nn"
    ]
   },
   {
