fixed link to Colab for neural net notebook

--- a/12_comment_semantic_analysis/comment_semantic_analysis.ipynb
+++ b/12_comment_semantic_analysis/comment_semantic_analysis.ipynb
@@ -6,17 +6,10 @@
    "source": [
     "Интернет-магазин «Викишоп» запускает новый сервис. Теперь пользователи могут редактировать и дополнять описания товаров, как в вики-сообществах. То есть клиенты предлагают свои правки и комментируют изменения других. Магазину нужен инструмент, который будет искать токсичные комментарии и отправлять их на модерацию. \n",
     "\n",
-    "Обучите модель классифицировать комментарии на позитивные и негативные. В вашем распоряжении набор данных с разметкой о токсичности правок.\n",
+    "Необходимо обучить модель классифицировать комментарии на позитивные и негативные. В нашем распоряжении набор данных с разметкой о токсичности правок.\n",
     "\n",
-    "Постройте модель со значением метрики качества *F1* не меньше 0.75. \n",
+    "Нужно построить модель со значением метрики качества *F1* не меньше 0.75. \n",
     "\n",
-    "### Инструкция по выполнению проекта\n",
-    "\n",
-    "1. Загрузите и подготовьте данные.\n",
-    "2. Обучите разные модели. \n",
-    "3. Сделайте выводы.\n",
-    "\n",
-    "Для выполнения проекта применять *BERT* необязательно, но вы можете попробовать.\n",
     "\n",
     "### Описание данных\n",
     "\n",
@@ -523,14 +516,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Поскольку обучение нейронок предпочтительно делать на GPU, раздел вынесен в отдельный блокнот (в соседнем файле), либо можно пройти по ссылке непосредственно в Google Colab"
+    "Смотрите соседний ноутбук в той же папке, либо непосредственно в Colab по ссылке ниже"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://colab.research.google.com/drive/1XTw1X7BS-_p9h03uH0ffCf_9BTzr7ouS?usp=sharing"
+    "https://colab.research.google.com/drive/1WiMkVeUvI5cIwfzQwzEk0xiUUwrAzuZC"
    ]
   },
   {
